modifiche alla home e al menu

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <title>EcommerceAngular</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="app.component.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" type="text/css" href="app.component.css"> <!-- Aggiungi questa riga per il tuo CSS -->
+    <!-- Aggiungi questa riga per il tuo CSS -->
   </head>
 <body>
   <app-root></app-root>
